--- a/quickcart/package.json
+++ b/quickcart/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
     "axios": "^1.11.0",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.7",
+    "formik": "^2.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.0"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.8.0",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
