--- a/quickcart/package.json
+++ b/quickcart/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.8.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.7.0"
   },
   "devDependencies": {
