--- a/quickcart/package.json
+++ b/quickcart/package.json
@@ -16,7 +16,9 @@
     "flowbite-react": "^0.12.7",
     "formik": "^2.4.6",
     "react": "^19.1.1",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^19.1.1",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.8.0",
     "react-slick": "^0.31.0",
