--- a/quickcart/package.json
+++ b/quickcart/package.json
@@ -19,6 +19,7 @@
     "react-detect-offline": "^2.4.5",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.8.0",
     "react-slick": "^0.31.0",
